--- a/app/views/elections/show.html.erb
+++ b/app/views/elections/show.html.erb
@@ -1,5 +1,8 @@
-<!--DOCTYPE HTML-->
-<head><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script></head>
+
+<head><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+</head>
 <body>
     <div id="header" style="height: 100px">
 	<h1> CSUA Voting System </h1>
@@ -9,6 +12,37 @@
 		<div id="elections" style="border:1px solid gray; width:200px; height:100%;float:left">
 		    <!-- election code -->
 			<div id="election_content"></div>
+
+		    <iframe name="hiddenFrame" class="hide" id="hiddenFrameID" style="display:none;"></iframe>
+		    
+		    <div id="electionmodal" title="Add Election"; style="display:none">
+			  <form action="/election_add_election" method="post" target="hiddenFrame" id="electionform" onsubmit="setTimeout(function () { window.location.reload(); }, 10)">
+			  	<input type='hidden' name='<%=request_forgery_protection_token.to_s%>' value="<%=form_authenticity_token%>">
+			  	<label>Organization:</label>
+			  	<input id="new_election_org" name="new_election_org" type="text" value="csua">
+			  	<br>
+			    <label>New election name:</label>
+			    <input id="new_election_name" name="new_election_name" type="text" autofocus><br>
+			    <input id="submit" type="submit" value="Create">
+			  </form>
+			</div>
+		    
+		    <div id="positionmodal" title="Add Position"; style="display:none">
+		    	<script>
+		    	function set_election_id() {
+					if ( $("#button_election_id").length ) {
+					    $("#election_id").val($("#button_election_id").val());
+					}
+				};
+		    	</script>
+			  <form action="/election_add_position" method="post" target="hiddenFrame" id="positionform" onsubmit="set_election_id(); setTimeout(function () { window.location.reload(); }, 10)">
+			  	<input type='hidden' name='<%=request_forgery_protection_token.to_s%>' value="<%=form_authenticity_token%>">
+			    <label>New position:</label>
+			    <input id="new_position_name" name="new_position_name" type="text">
+			    <input id="election_id" name="election_id" type="hidden" value=""><br>
+			    <input id="submit" type="submit" value="Create">
+			  </form>
+			</div>
 		</div>
 		<div id="main_page" style="border:1px solid gray; height:100%">
 		    <!-- dashboard -->
@@ -17,6 +51,22 @@
     
     <script>
 	$(document).ready(function() {
+		function set_election_id() {
+			if ( $("#button_id").length ) {
+			    $("#election_id").val($("#button_id").val());
+			}
+		};
+		function open_position_modal(button_id) {
+			$(function(button_id) {
+				$("#hiddenFrameID").empty();
+				$("#positionmodal").dialog({autoOpen: false, modal:true});
+				$("#election_id").value(button_id);
+				$("#submit").click(function(e) {
+					$("#positionmodal").dialog("close");
+					$("#hiddenFrameID").empty();
+				});
+			});
+		};
 		function get_election_content() {
 			 $.ajax({
 	          type: 'GET',
@@ -28,10 +78,10 @@
 	          }
 	      });
 		};
-		setInterval(get_election_content(),5000);
-		console.log("hi");
+		get_election_content();
+		setInterval(function() {get_election_content()},5000);
 	});
-</script>
+	</script>
     
 </body>
 
