--- a/app/views/elections/show_elections.html.erb
+++ b/app/views/elections/show_elections.html.erb
@@ -1,10 +1,40 @@
+<script>
+
+function open_election_modal() {
+	$(function() {
+		$("#hiddenFrameID").empty();
+		$("#electionmodal").dialog({autoOpen: false, modal:true});
+		$("#electionmodal").dialog("open");
+	});
+};
+
+function open_position_modal(button_id) {
+	$(function() {
+	  $("#button_id").val(button_id);
+		$("#hiddenFrameID").empty();
+		$("#positionmodal").prepend('<input id="button_election_id" style="display:none;" value='+button_id+'>')
+		$("#positionmodal").dialog({autoOpen: false, modal:true});
+		$("#positionmodal").dialog("open");
+	});
+};
+</script>
+<input id="button_id" style="display:none;" value=""></input>
 <ul style="display:inline;list-style-type:none">
-  <li><button type="button" onclick="alert('Hello world!')">Add position</button></li>
-  <li>CSUA
+  <li><button type="button" onclick="open_election_modal()">Add election</button></li>
+  <% for @election in @election_list %>
+    <li> <%= @election.election_id %>
     <ul style="list-style-type:none;margin-left:-20px">
-    <li><button type="button" onclick="alert('Hello worlds!')">Black tea</button></li>
-    <li>Green tea</li>
+      <% if @position_list_acc != nil && @position_list_acc != {} %>
+        <% if @position_list_acc[@election.election_id] != nil && @position_list_acc[@election.election_id] != [] %>
+          <% for @position in @position_list_acc[@election.election_id] %>
+            <li><button type="button" id="<%= @election.election_id %>_<%= @position %>" onclick="alert('This is not implemented yet')"> <%= @position %> </button></li>
+          <% end %>
+        <% end %>
+      <% end %>
+      <% @curr_election = @election.election_id %>
+      <li><button type="button" id="<%=@election.election_id%>" onclick="open_position_modal('<%=@election.election_id%>')">Add position</button></li>
     </ul>
-  </li>
-  <li>Milk</li>
-  </ul>
+    </li>
+  <% end %>
+</ul>
+
