--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -71,3 +71,13 @@ div {
     list-style: square;
   }
 }
+
+.election_column {
+  float:left;
+}
+.election_dashboard {
+  overflow:hidden;
+}
+.election_livestream {
+  float:right;
+}
