--- a/app/views/elections/login.html.erb
+++ b/app/views/elections/login.html.erb
@@ -9,14 +9,11 @@
     <div id="header" style="height: 100px">
 	<h1> CSUA Voting System </h1>
     </div>
-    <p>this is a button1</p>
     <div style="text-align:center">
-      <p>this is a button2</p>
       <% if current_user != nil %>
         <meta http-equiv="refresh" content="0;url=/dashboard/home">
       <% else %>
-      <%= link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in" %>
-       
+        <%= button_to "Sign in with Google", "/auth/google_oauth2", {id: "sign_in_id"} %>
       <% end %>
     </div>
     
