test new heroku name

--- a/app/views/elections/show.html.erb
+++ b/app/views/elections/show.html.erb
@@ -20,7 +20,7 @@
         Hello, <strong><%= current_user.user_name.partition(" ").first %></strong>.
         <%= link_to "Sign out", signout_path, id: "sign_out" %>
       <% else %>
-        <%= link_to "Sign IN with Google", oauth_callback_test2_path, id: "sign_in" %>
+        <%= link_to "Sign iN with Google", oauth_callback_test2_path, id: "sign_in" %>
       <% end %>
     </div>
     <div>
