test new heroku name

--- a/app/views/elections/show.html.erb
+++ b/app/views/elections/show.html.erb
@@ -13,14 +13,14 @@
 </head>
 <body>
     <div id="header" style="height: 100px">
-	<h1> CSUA Voting System </h1>
+	<h1> CSUA VOting System </h1>
 	<div style="text-align:right">
       <% if current_user != nil %>
       <% puts "this is #{current_user}" %>
         Hello, <strong><%= current_user.user_name.partition(" ").first %></strong>.
         <%= link_to "Sign out", signout_path, id: "sign_out" %>
       <% else %>
-        <%= link_to "Sign iN with Google", oauth_callback_test2_path, id: "sign_in" %>
+        <%= link_to "Sign in with Google", oauth_callback_test2_path, id: "sign_in" %>
       <% end %>
     </div>
     <div>
