--- a/app/views/elections/show.html.erb
+++ b/app/views/elections/show.html.erb
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div id="header" style="height: 100px">
-	<h1> CSUA VOTING System </h1>
+	<h1> CSUA VOTING SYSTEM </h1>
 	<div style="text-align:right">
       <% if current_user != nil %>
       <% puts "this is #{current_user}" %>
