--- a/app/views/elections/login.html.erb
+++ b/app/views/elections/login.html.erb
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="header" style="height: 100px">
-	<h1> CSUA Voting System </h1>
+	<h1> CSUA VOTING System </h1>
     </div>
     <div style="text-align:center">
       <% if current_user != nil %>
