--- a/app/views/elections/login.html.erb
+++ b/app/views/elections/login.html.erb
@@ -13,7 +13,7 @@
       <% if current_user != nil %>
         <meta http-equiv="refresh" content="0;url=/dashboard/home">
       <% else %>
-        <%= link_to "Sign in with Google", oauth_callback_test2_path, id: "sign_in" %>
+        <%= link_to "Sign IN with Google", oauth_callback_test2_path, id: "sign_in" %>
       <% end %>
     </div>
     
