--- a/app/views/elections/show.html.erb
+++ b/app/views/elections/show.html.erb
@@ -33,6 +33,21 @@
 			    <!-- election panel code -->
 				<div class="election_column" id="election_content" style="float:left"></div>
 			    
+			    <div id="electionmodal" title="Add Organization"; style="display:none">
+			    <form action="/election_add_position" method="post" target="hiddenFrame" id="positionform" onsubmit="set_election_id(); setTimeout(function () { window.location.reload(); }, 10)">
+				  	<input type='hidden' name='<%=request_forgery_protection_token.to_s%>' value="<%=form_authenticity_token%>">
+				  	<label>Organization:</label>
+				  	<input id="new_election_org" name="new_election_org" type="text" value="csua">
+				  	<br>
+				    <label>New election name:</label>
+				    <input id="new_election_name" name="new_election_name" type="text" autofocus><br>
+				    <label>YT livestream (optional):</label>
+				    <input id="new_election_livestream" name="new_election_livestream" type="text"><br>
+				    <input id="submit" type="submit" value="Create">
+				  </form>
+				</div>
+			    
+			    
 			    <div id="electionmodal" title="Add Election"; style="display:none">
 			    <form action="/election_add_position" method="post" target="hiddenFrame" id="positionform" onsubmit="set_election_id(); setTimeout(function () { window.location.reload(); }, 10)">
 				  	<input type='hidden' name='<%=request_forgery_protection_token.to_s%>' value="<%=form_authenticity_token%>">
@@ -64,6 +79,7 @@
 				  </form>
 				</div>
 			</div>
+			<div style="width:10px"></div>
 			<div id="main_page" style="border:1px solid gray; height:100%">
 			    <!-- main dashboard -->
 			    <div class="election_dashboard" id="election_dashboard" style="float:left">This is the election dashboard stuff</div>
