--- a/app/views/elections/show_main.html.erb
+++ b/app/views/elections/show_main.html.erb
@@ -2,6 +2,14 @@
 <% if current_user != nil %>
 	<script>
 	
+  function open_organization_modal() {
+    $(function() {
+  		$("#hiddenFrameID").empty();
+  		$("#organizationmodal").dialog({autoOpen: false, modal:true});
+  		$("#organizationmodal").dialog("open");
+  	});
+  };
+	
 	function open_election_modal() {
 		$(function() {
 			$("#hiddenFrameID").empty();
