--- a/app/views/elections/show.html.erb
+++ b/app/views/elections/show.html.erb
@@ -38,6 +38,7 @@
 				  	<input type='hidden' name='<%=request_forgery_protection_token.to_s%>' value="<%=form_authenticity_token%>">
 				  	<label>New organization name:</label>
 				  	<input id="new_org" name="new_org" type="text"><br>
+				    <input id="submit" type="submit" value="Create">
 				  </form>
 				</div>
 
