--- a/app/views/elections/show_settings.html.erb
+++ b/app/views/elections/show_settings.html.erb
@@ -16,11 +16,11 @@
   };
   
   function submit_individual(user_name, user_email, organization, admin_status){
-    if(user_name == "" || user_email == "") {
+    if(user_name == null || user_email == null) {
       alert('User must have a name and email');
     } else{
     $.ajax({
-      url: /election_add_individual",
+      url: "/election_add_individual",
       type: 'POST',
       data: {'user_email':user_email,
                'organization':organization,
